# blockchain-network

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  EXAMPLES.md  GEMINI.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.dapp.md  README.md  SECURITY.md  TROUBLESHOOTING.md  block.cpp  block.h  blockChain.cpp  blockChain.h  blockNetwork.cpp  blockNetwork.h  gtest_main.cpp  improvement.md  input1.txt  main.cpp  output1.txt  p4  p4_new  p4_new2  package-lock.json  package.json  project4.cpp  server.js  sha256.h  tests_bin  tests_bin_new  tests_bin_new2  transaction.cpp  transaction.h
.agent/: .gitignore  README.md  run_agent.sh
.agent/config/: agent.yaml  validation_rules.yaml
.agent/instructions/: improvement_roadmap.md  system_prompt.md
.agent/progress/: current_session.json  history.jsonl
.agent/scripts/: validate.sh
.github/workflows/: cmake.yml
contracts/: BlockchainNetwork.sol
gtest/: gtest.h  gtest_main.cc  gtest_main.cpp
public/: index.html
public/css/: style.css
public/js/: app.js
scripts/: deploy.js
test/: BlockchainNetwork.test.js
tests/: test_blockchain.cpp  test_network.cpp  test_sha256.cpp  test_transaction.cpp
tools/: ai_audit.py
